TCGs now all work with the generic controller, lots of Native Preparations